--- a/MyBoxOffice/Base.lproj/Main.storyboard
+++ b/MyBoxOffice/Base.lproj/Main.storyboard
@@ -259,7 +259,7 @@
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="qZp-sO-VPJ">
+                                                    <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="qZp-sO-VPJ">
                                                         <rect key="frame" x="8" y="8" width="100" height="151"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" constant="100" id="thk-CI-ALa"/>
@@ -749,6 +749,6 @@
         <image name="img_placeholder" width="100" height="140"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="ATg-6x-Fiw"/>
+        <segue reference="Y4q-hZ-Rzd"/>
     </inferredMetricsTieBreakers>
 </document>
