--- a/MyBoxOffice/Base.lproj/Main.storyboard
+++ b/MyBoxOffice/Base.lproj/Main.storyboard
@@ -41,7 +41,7 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="179" height="190"/>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WRg-t0-2Z6">
-                                                    <rect key="frame" x="89.5" y="198" width="0.0" height="0.0"/>
+                                                    <rect key="frame" x="0.0" y="198" width="179" height="0.0"/>
                                                     <fontDescription key="fontDescription" name=".SFNSDisplay" family=".SF NS Display" pointSize="26"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -75,10 +75,11 @@
                                             <constraint firstItem="dEo-2h-KQx" firstAttribute="top" secondItem="Acx-Xn-wlO" secondAttribute="top" constant="8" id="Xe7-sO-Iet"/>
                                             <constraint firstItem="MZS-TT-Nrf" firstAttribute="top" secondItem="Acx-Xn-wlO" secondAttribute="top" id="YJ5-Jy-oRH"/>
                                             <constraint firstItem="MZS-TT-Nrf" firstAttribute="leading" secondItem="Acx-Xn-wlO" secondAttribute="leading" id="YYA-t5-pkW"/>
+                                            <constraint firstItem="WRg-t0-2Z6" firstAttribute="centerX" secondItem="Acx-Xn-wlO" secondAttribute="centerX" id="dLl-a7-qKr"/>
                                             <constraint firstItem="Icw-md-KhV" firstAttribute="centerX" secondItem="Acx-Xn-wlO" secondAttribute="centerX" id="q1F-MH-ABU"/>
                                             <constraint firstItem="BsL-iG-JS9" firstAttribute="centerX" secondItem="Acx-Xn-wlO" secondAttribute="centerX" id="qgT-dX-HOK"/>
+                                            <constraint firstItem="WRg-t0-2Z6" firstAttribute="width" secondItem="Acx-Xn-wlO" secondAttribute="width" id="sJ2-c4-Psl"/>
                                             <constraint firstItem="BsL-iG-JS9" firstAttribute="top" secondItem="Icw-md-KhV" secondAttribute="bottom" constant="8" id="vjG-8w-3pH"/>
-                                            <constraint firstItem="WRg-t0-2Z6" firstAttribute="centerX" secondItem="Acx-Xn-wlO" secondAttribute="centerX" id="wsv-CQ-2tY"/>
                                             <constraint firstItem="WRg-t0-2Z6" firstAttribute="top" secondItem="MZS-TT-Nrf" secondAttribute="bottom" constant="8" id="ydf-cs-Dr4"/>
                                         </constraints>
                                         <connections>
@@ -512,7 +513,7 @@
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JTy-CF-Uhy" userLabel="name">
                                                                     <rect key="frame" x="105" y="19" width="43" height="21"/>
-                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
@@ -525,7 +526,7 @@
                                                                 </imageView>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Time Stamp" textAlignment="natural" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nfr-KG-bB8">
                                                                     <rect key="frame" x="105" y="44" width="240" height="21"/>
-                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
@@ -560,22 +561,22 @@
                                                                     </constraints>
                                                                 </stackView>
                                                                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" scrollEnabled="NO" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SJF-B4-epr">
-                                                                    <rect key="frame" x="86" y="63" width="281" height="43"/>
+                                                                    <rect key="frame" x="98" y="56" width="269" height="50"/>
                                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                                                 </textView>
                                                             </subviews>
                                                             <constraints>
-                                                                <constraint firstItem="fIW-pJ-eTU" firstAttribute="bottom" secondItem="JTy-CF-Uhy" secondAttribute="bottom" id="8Km-EQ-xsg"/>
-                                                                <constraint firstItem="Nfr-KG-bB8" firstAttribute="top" secondItem="JTy-CF-Uhy" secondAttribute="bottom" constant="2" id="BZT-h9-SYg"/>
+                                                                <constraint firstItem="SJF-B4-epr" firstAttribute="leading" secondItem="Nfr-KG-bB8" secondAttribute="leading" id="7eb-7V-6dX"/>
+                                                                <constraint firstItem="Nfr-KG-bB8" firstAttribute="top" secondItem="JTy-CF-Uhy" secondAttribute="bottom" constant="2" id="H1H-RT-8Bv"/>
                                                                 <constraint firstItem="SJF-B4-epr" firstAttribute="top" secondItem="Nfr-KG-bB8" secondAttribute="bottom" constant="1" id="Kde-1W-JnC"/>
                                                                 <constraint firstItem="yM7-Ak-OOL" firstAttribute="top" secondItem="3Ae-Vz-nsB" secondAttribute="topMargin" constant="8" id="LfD-2N-JnU"/>
                                                                 <constraint firstAttribute="bottomMargin" secondItem="SJF-B4-epr" secondAttribute="bottom" constant="-6" id="Mdz-cB-As2"/>
                                                                 <constraint firstItem="fIW-pJ-eTU" firstAttribute="leading" secondItem="JTy-CF-Uhy" secondAttribute="trailing" constant="7.5" id="NZb-Br-aPj"/>
-                                                                <constraint firstItem="JTy-CF-Uhy" firstAttribute="leading" secondItem="yM7-Ak-OOL" secondAttribute="trailing" constant="8" id="abm-wb-ghc"/>
+                                                                <constraint firstItem="JTy-CF-Uhy" firstAttribute="leading" secondItem="yM7-Ak-OOL" secondAttribute="trailing" constant="20" id="QFS-7V-eJT"/>
                                                                 <constraint firstItem="Nfr-KG-bB8" firstAttribute="leading" secondItem="JTy-CF-Uhy" secondAttribute="leading" id="bYg-ci-bva"/>
-                                                                <constraint firstItem="SJF-B4-epr" firstAttribute="leading" secondItem="JTy-CF-Uhy" secondAttribute="leading" id="hff-Vd-OjJ"/>
+                                                                <constraint firstItem="fIW-pJ-eTU" firstAttribute="bottom" secondItem="JTy-CF-Uhy" secondAttribute="bottom" id="oUE-Gy-Fct"/>
                                                                 <constraint firstItem="yM7-Ak-OOL" firstAttribute="leading" secondItem="3Ae-Vz-nsB" secondAttribute="leadingMargin" id="rDS-RP-H6G"/>
                                                                 <constraint firstItem="JTy-CF-Uhy" firstAttribute="top" secondItem="3Ae-Vz-nsB" secondAttribute="topMargin" constant="8" id="rxW-ox-vEW"/>
                                                                 <constraint firstAttribute="trailing" secondItem="SJF-B4-epr" secondAttribute="trailing" constant="8" id="zxr-J9-dbD"/>
@@ -749,6 +750,6 @@
         <image name="img_placeholder" width="100" height="140"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Y4q-hZ-Rzd"/>
+        <segue reference="ATg-6x-Fiw"/>
     </inferredMetricsTieBreakers>
 </document>
